# random-walker

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CODESTYLE.md  MetaAnnotations.hpp  README.md  cpp.hint  global.hpp  main.cpp  qml.qrc  vcpkg.json
app/adapter/: MaskRenderer.hpp  QImageAdapter.hpp
app/context/: AppContext.cpp  AppContext.hpp
app/qml/: qml_names.hpp  qml_registration.hpp
app/service/: BaseImageProvider.cpp  BaseImageProvider.hpp  BaseImageSink.hpp  EventBus.hpp  ResultImageProvider.cpp  ResultImageProvider.hpp  ResultImageSink.hpp
application/diagnostics/: Logging.cpp  Logging.hpp
application/error/: UserError.hpp
application/markers/: AutoMarkerExecutor.hpp  AutoMarkerService.cpp  AutoMarkerService.hpp  JThreadAutoMarkerExecutor.cpp  JThreadAutoMarkerExecutor.hpp
application/segmentation/: SegmentationExecutor.hpp  SegmentationUseCase.cpp  SegmentationUseCase.hpp
application/settings/: ApplicationSettings.hpp  SettingsRepository.hpp  SettingsService.cpp  SettingsService.hpp
bootstrap/: AppContext.cpp  AppContext.hpp
docs/: Random Walker Algorithm.md  random-walker-algorithm.md
docs/.obsidian/: workspace.json
infrastructure/execution/: JThreadAutoMarkerExecutor.cpp  JThreadAutoMarkerExecutor.hpp  JThreadSegmentationExecutor.cpp  JThreadSegmentationExecutor.hpp
infrastructure/logging/: Logging.cpp  Logging.hpp
infrastructure/settings/: QSettingsRepository.cpp  QSettingsRepository.hpp  QtSettingsRepository.cpp  QtSettingsRepository.hpp
mo_RandomWalker/: CMakeLists.txt  cpp.hint  main.cpp  qml.qrc
mo_RandomWalker/app/context/: AppContext.cpp  AppContext.hpp
mo_RandomWalker/app/data/: Rect.hpp
mo_RandomWalker/app/enums/: QmlEnums.hpp
mo_RandomWalker/app/qml/: qml_names.hpp  qml_registration.hpp
mo_RandomWalker/app/service/: EventBus.cpp
mo_RandomWalker/model/algorithm/: RandomWalkerAlgorithm.cpp
mo_RandomWalker/model/graph/: PixelGraph.cpp
mo_RandomWalker/model/utils/: ImageUtils.hpp
mo_RandomWalker/view/panels/: ControlPanel.qml  SettingsPanel.qml  WithoutReferenceToolBar.qml  qmldir
mo_RandomWalker/view/views/: BaseImageView.qml  MainView.qml
mo_RandomWalker/viewmodel/: BaseImageViewModel.cpp  BaseImageViewModel.hpp  ControlPanelViewModel.cpp  ControlPanelViewModel.hpp  ModeSelectionPanelViewModel.hpp  ResultOverlayViewModel.hpp  SeedsListModel.cpp  SeedsListModel.hpp  SeedsOverlayViewModel.cpp  SeedsOverlayViewModel.hpp  SettingsPanelViewModel.hpp  WithoutReferenceToolBarViewModel.cpp  WithoutReferenceToolBarViewModel.hpp
model/algorithm/: BoundaryConditions.cpp  BoundaryConditions.hpp  DirichletProblemValidation.cpp  DirichletProblemValidation.hpp  DistanceTransform.cpp  DistanceTransform.hpp  HarmonicSolver.cpp  HarmonicSolver.hpp  IndexTypes.hpp  IterationPolicy.hpp  NodePartition.cpp  NodePartition.hpp  ParallelPolicy.hpp  PartitionedLaplacian.cpp  PartitionedLaplacian.hpp  ProbabilityField.cpp  ProbabilityField.hpp  RandomWalkerAlgorithm.cpp  RandomWalkerAlgorithm.hpp  SeedExpansion.cpp  SeedExpansion.hpp
model/domain/: AutoMarkers.hpp  Cancellation.hpp  GrayImage.hpp  ImageGeometry.hpp  ProgressReporter.hpp  RandomWalkerParameters.hpp  Seed.hpp  Segmentation.hpp  SegmentationConstraints.hpp  SegmentationConstraintsValidation.cpp  SegmentationConstraintsValidation.hpp  SegmentationLimits.hpp
model/executor/: JThreadSegmentationExecutor.cpp  JThreadSegmentationExecutor.hpp  SegmentationExecutor.hpp
model/graph/: EdgeLocalContrastScale.hpp  EdgeLocalNeighborhood.hpp  EdgeWeight.hpp  GridGeometry.hpp  GridLaplacian.cpp  GridLaplacian.hpp  LocalContrastScale.hpp  PixelGraph.cpp  PixelGraph.hpp
model/markers/: GmmIntensity.cpp  GmmIntensity.hpp  GmmMarkerProposal.cpp  GmmMarkerProposal.hpp
model/service/: SegmentationService.cpp  SegmentationService.hpp
presentation/adapter/: AutoMarkerMaskRenderer.cpp  AutoMarkerMaskRenderer.hpp  MaskRenderer.cpp  MaskRenderer.hpp  QImageAdapter.hpp
presentation/error/: ErrorPresenter.cpp  ErrorPresenter.hpp
presentation/image/: AutoMarkerImageProvider.cpp  AutoMarkerImageProvider.hpp  BaseImageProvider.cpp  BaseImageProvider.hpp  ImageLoader.cpp  ImageLoader.hpp  PresentationImageCache.hpp  ResultImageProvider.cpp  ResultImageProvider.hpp
presentation/qml/: qml_names.hpp
tests/: CMakeLists.txt
tests/application/: AutoMarkerServiceTests.cpp  DiagnosticsLoggingTests.cpp  SegmentationUseCaseTests.cpp
tests/infrastructure/: LoggingTests.cpp
tests/model/: AlgorithmTests.cpp  DistanceTransformTests.cpp  DomainTests.cpp  GmmIntensityTests.cpp  GmmMarkerProposalTests.cpp  SegmentationServiceTests.cpp
tests/presentation/: AutoMarkerMaskRendererTests.cpp
tests/settings/: SettingsTests.cpp
tests/viewmodel/: SegmentationViewModelTests.cpp  ViewModelHelperTests.cpp
view/panels/: ControlPanel.qml  ModeSelectionPanel.qml  SettingLabel.qml  SettingsPanel.qml  SettingsSection.qml  WithReferenceToolBar.qml  qmldir
view/views/: AutoMarkerOverlay.qml  BaseImageView.qml  MainView.qml  RectSeedMouseArea.qml  ResultOverlay.qml  SeedLayer.qml
view/windows/: AboutWindow.qml  qmldir
viewmodel/: AutomaticMarkerState.cpp  AutomaticMarkerState.hpp  BaseImageViewModel.cpp  BaseImageViewModel.hpp  ErrorState.cpp  ErrorState.hpp  ImageState.cpp  ImageState.hpp  ProgressState.cpp  ProgressState.hpp  ResultState.cpp  ResultState.hpp  SeedListModel.cpp  SeedListModel.hpp  SeedRegionGeometry.cpp  SeedRegionGeometry.hpp  SeedRegionState.cpp  SeedRegionState.hpp  SegmentationConstraintsBuilder.cpp  SegmentationConstraintsBuilder.hpp  SegmentationViewModel.cpp  SegmentationViewModel.hpp  SettingsPanelViewModel.cpp  ViewModelCallbackGate.cpp  ViewModelCallbackGate.hpp  ViewModelConversions.cpp  ViewModelConversions.hpp  WithReferenceToolBarViewModel.cpp  WithReferenceToolBarViewModel.hpp
